--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         /* === Hero Section الجديد (صورة مجات على رفوف) === */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1596080277259-24b423cb0235?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('mugs/jpeg (100).jpg');
             background-size: cover; 
             background-position: center; 
             height: 350px; 
