--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     .theme-toggle { position: absolute; top: 20px; left: 20px; background: rgba(255,255,255,0.2); border: none; color: white; width: 40px; height: 40px; border-radius: 50%; cursor: pointer; font-size: 1.2rem; }
 
     .hero-section {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('mugs/hero.jpg');
+      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('mugs/Gemini_Generated_Image_foq2affoq2affoq2.png');
       background-size: cover;
       background-position: center;
       height: 350px;
