--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="متجر بنان - BANAN Store | تشكيلة مميزة من المجات والأكواب في فلسطين.">
 
   <meta property="og:title" content="BANAN Store - متجر بنان">
@@ -60,6 +60,9 @@
 
     * { margin: 0; padding: 0; box-sizing: border-box; transition: background-color .3s, color .3s, transform .2s, box-shadow .2s; }
     body { font-family: 'Cairo', sans-serif; background: var(--bg-gradient); color: var(--text); padding-bottom: 80px; min-height: 100vh; }
+
+    /* --- تحسين رقم 3: منع التكبير المزعج في الآيفون --- */
+    input, select, textarea { font-size: 16px !important; }
 
     header {
       background: rgba(93, 64, 55, 0.95);
@@ -217,6 +220,49 @@
       transform: translateY(-2px) scale(1.01);
       box-shadow: 0 18px 38px rgba(37, 211, 102, 0.28) !important;
     }
+
+    /* ----------------------------------------------------------------- */
+    /* بداية تحسينات الهاتف (Grid + Bottom Sheet + Sticky Checkout) */
+    /* ----------------------------------------------------------------- */
+    @media (max-width: 600px) {
+      /* تحسين 1: شبكة منتجات ثنائية */
+      .products-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+        padding: 0 5px;
+      }
+      .product-img { height: 160px; }
+      .product-info { padding: 10px; }
+      .product-info h3 { font-size: 0.95rem; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+      .price { font-size: 1.1rem; }
+      .add-cart-btn { padding: 8px; font-size: 0.9rem; }
+      
+      /* تحسين 2: تحويل المودال إلى Bottom Sheet */
+      .modal, .product-modal {
+        align-items: flex-end; /* المحتوى ينزل للأسفل */
+        padding: 0;
+      }
+      .modal-content, .product-modal-content {
+        border-radius: 25px 25px 0 0;
+        margin: 0;
+        width: 100%;
+        max-width: 100%;
+        max-height: 85vh;
+        animation: slideUp 0.3s ease-out;
+      }
+      @keyframes slideUp { from { transform: translateY(100%); } to { transform: translateY(0); } }
+
+      /* تحسين 5: تثبيت أزرار الدفع وجعل القائمة قابلة للتمدد داخل الشيت */
+      #cartModal .modal-content {
+        display: flex;
+        flex-direction: column;
+      }
+      #cartItems {
+        flex: 1; /* يأخذ المساحة المتبقية */
+        max-height: none !important; /* إلغاء الطول الثابت ليتناسب مع الشاشة */
+        overflow-y: auto;
+      }
+    }
   </style>
 </head>
 
@@ -298,6 +344,7 @@
     <div class="modal-content">
       <span class="close-modal" onclick="closeModal('cartModal')" style="position:absolute; top:20px; right:20px; font-size:1.5rem; cursor:pointer;">&times;</span>
       <h3 style="margin-bottom:20px; border-bottom:1px solid #eee; padding-bottom:10px;">🛒 سلة المشتريات</h3>
+      
       <div id="cartItems" style="max-height: 300px; overflow-y: auto;"></div>
 
       <div class="coupon-section">
@@ -319,7 +366,6 @@
       <span class="close-modal" onclick="closeModal('checkoutModal')" style="position:absolute; top:20px; right:20px; font-size:1.5rem; cursor:pointer;">&times;</span>
       <h3 style="text-align:center; margin-bottom:25px;">📦 معلومات التوصيل</h3>
 
-      <!-- ✅ Honeypot (hidden) -->
       <input id="hpWebsite" type="text" autocomplete="off" tabindex="-1"
              style="position:absolute; left:-9999px; top:-9999px; opacity:0" />
 
@@ -333,7 +379,7 @@
       </div>
       <div class="form-group">
         <label>رقم للتواصل:</label>
-        <input type="tel" id="custPhone" placeholder="059xxxxxxx">
+        <input type="tel" id="custPhone" placeholder="059xxxxxxx" inputmode="numeric" pattern="[0-9]*">
       </div>
 
       <button class="checkout-btn" onclick="sendWhatsApp()">
